unpackaged/main/default/objects/Account/fields/Account_Budget__c.field-meta.xml
<CustomField>
    <fullName>Account_Budget__c</fullName>
    <label>Account Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>