unpackaged/main/default/objects/Account/fields/GearSet__c.field-meta.xml
<CustomField>
    <fullName>GearSet__c</fullName>
    <label>GearSet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>