unpackaged/main/default/objects/Account/fields/Naukri_Country__c.field-meta.xml
<CustomField>
    <fullName>Naukri_Country__c</fullName>
    <label>Naukri_Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Naukri_Country</valueSetName>
    </valueSet>
</CustomField>