unpackaged/main/default/objects/Account/fields/PhoneCheck__c.field-meta.xml
<CustomField>
    <fullName>PhoneCheck__c</fullName>
    <label>PhoneCheck</label>
    <type>Phone</type>
</CustomField>