unpackaged/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA,</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>MH,</fullName>
            </value>
            <value>
                <fullName>MP,</fullName>
            </value>
            <value>
                <fullName>UP,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>