unpackaged/main/default/objects/Account/fields/Total_sales_quantities__c.field-meta.xml
<CustomField>
    <fullName>Total_sales_quantities__c</fullName>
    <label>Total sales quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>