unpackaged/main/default/objects/Account/validationRules/asd.validationRule-meta.xml
<ValidationRule>
    <fullName>asd</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER(&#39;Total_sales_quantities__c&#39;)</errorConditionFormula>
    <errorMessage>asdad</errorMessage>
</ValidationRule>