unpackaged/main/default/objects/Account/validationRules/Test_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(Rating, &#39;&#39;)) &amp;&amp; $Setup.Validation_Rule_Bypass__c.isActive__c</errorConditionFormula>
    <errorMessage>Validation on Rating field</errorMessage>
</ValidationRule>